Final analysis and ReadMe

--- a/Starter_Code/Pymaceuticals/pymaceuticals_technical_report_and_analysis.ipynb
+++ b/Starter_Code/Pymaceuticals/pymaceuticals_technical_report_and_analysis.ipynb
@@ -4,13 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pymaceuticals Inc.\n",
+    "##Pymaceuticals Inc.\n",
     "---\n",
     "\n",
     "### Analysis\n",
     "\n",
-    "- Add your analysis here.\n",
-    " "
+    "- As a whole, this study highlights how the Capomulin drug does show a decrease in tumor volume with the second lowest average in tumor volume, 40.68, compared to the lowest, Ramicane at 40.22, with the four most promising treatment regimens were found to be: Capomulin, Ramicane, Infubinol, Ceftamin\n",
+    "-As a whole, when compared Capomulin, Ramicane, and Ceftamin were shown to have no significant potential outliers and all data fell within the standard deviation with Ramicane showing one potential oulier that can impact the data results.\n",
+    "-As a whole, a strong correlation of .84 was found between the average tumor volume of a mouse treated with Capomulin that thier weight over time. As a mouses' weight increased, there was additionally an increase in tumor volume."
    ]
   },
   {
